--- a/src/styles/component/_pastillas.scss
+++ b/src/styles/component/_pastillas.scss
@@ -346,6 +346,22 @@
   background-color: #99f;
   color: #ffffff;
 }
+.tippy-box[data-theme~='wp'] {
+  background-color: #21759b;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='woo'] {
+  background-color: #9b5c8f;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='mercado'] {
+  background-color: #04a6e9;
+  color: #ffffff;
+}
+.tippy-box[data-theme~='elementor'] {
+  background-color: #bd3264;
+  color: #ffffff;
+}
 
 
 
