--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -38,7 +38,7 @@ $p-font-family: 'Poppins', sans-serif;
     --bg-image-footer: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%23542331' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23512230' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%234d2130' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%234a212f' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%2347202e' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23431f2d' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%23401e2d' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%233d1e2c' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%23391d2b' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23361c2b' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23321b2a' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%232f1b29' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%232c1a29' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%23281928' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%23251827' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%23221826' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%231e1726' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%231B1625' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
     --bg-toggle-switch-lenguage: #183153;
     --bsz-font-color-green: #2dc57e;
-    --walletfy-bg-video: #161818;
+    --walletfy-bg-video: #011d2a;
     --kyber-font-color: #f3f3f3;
     --kyber-icon-color: #bfc260;
     --btn-thorkey-bg: #85611f;
