--- a/src/styles/component/_bszStore.scss
+++ b/src/styles/component/_bszStore.scss
@@ -10,41 +10,107 @@
       p{
         color: #fff;
         @extend .project-tech-stack;
+        margin: 1em 0 1em 0;
       }
   }
-  .bsz-li{
+  //Pills
+  .wrapper-bsz-pill ul {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    vertical-align: middle;
+    justify-content: center;
+    margin: 2em 0 2em 0;
+  }
+  .wrapper-bsz-pill ul li {
+    width: 90px;
+    height: 90px;
+    line-height: 90px;
+    margin: 0 10px;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 50%;
+    border: var(--border-wrapper-skills);
+    transition: all 0.5s ease;
+    background-color: #ffffffdd;
+  }
+  .wrapper-bsz-pill ul li img{
+    width:30px;
+    margin-bottom: 10px;
+    opacity: var(--skills-opacity-img);
+    pointer-events: none;
+  }
+
+/* react */
+.wrapper-bsz-pill ul li:hover.border-react {
+  border: 5px solid #61dafb;
+  box-shadow: 0 0 15px #61dafb;
+  transition: all 0.3s ease;
+}
+.wrapper-bsz-pill ul li .i-react {
+  width: 45px;
+}
+.wrapper-bsz-pill ul li:hover .i-react {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+/* bootstrap */
+.wrapper-bsz-pill ul li:hover.border-bootstrap {
+  border: 5px solid #7952b3;
+  box-shadow: 0 0 15px #7952b3;
+  transition: all 0.3s ease;
+}
+.wrapper-bsz-pill ul li .i-bootstrap {
+  width: 45px;
+}
+.wrapper-bsz-pill ul li:hover .i-bootstrap {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+/* sass */
+.wrapper-bsz-pill ul li:hover.border-sass {
+  border: 5px solid #cf649a;
+  box-shadow: 0 0 15px #cf649a;
+  transition: all 0.3s ease;
+}
+.wrapper-bsz-pill ul li .i-sass {
+  width: 45px;
+}
+.wrapper-bsz-pill ul li:hover .i-sass {
+  opacity: 1;
+  transition: all 0.3s ease;
+}
+
+
+.bsz-li{
     @extend .project-funtionalities;
       .li-bsz-icons{
         font-size: 2rem;
         color: var(--bsz-font-color-green);
       }  
   }
-  .card-icon-bsz{
-    height: 95px;
-    width: 95px;
-    border-radius: 10px;
-    margin: 0px 10px ;
-    background-color: rgb(255, 255, 255);
-  }
-  .sk-icon-bsz{
-    height: 75px;
-    width: 75px;
-  }
 
   /* Breakpoint  formato pc, arriba de los 991px*/
 @media screen and (max-width: 992px) {    
-    .sk-icon-bsz{
-      height: 75px;
-      width: 75px;
+  .bg-pasti-bsz{
+    p{
+      margin: 2em 1em 1em 1em;
     }
-    .card-icon-bsz{
-      height: 95px;
-      width: 95px;
-      border-radius: 10px;
-      margin: 0px 10px ;
-      background-color: rgb(255, 255, 255);
-    } 
-    
+  }
+  .wrapper-bsz-pill ul li {
+    width: 85px;
+    height: 85px;
+    line-height: 85px;
+  }
+  .wrapper-bsz-pill ul li .i-react {
+    width: 40px;
+  }
+  .wrapper-bsz-pill ul li .i-bootstrap {
+    width: 40px;
+  }
+  .wrapper-bsz-pill ul li .i-sass {
+    width: 40px;
+  } 
   }
 
   /* Breakpoint formato tablet*/
@@ -52,22 +118,30 @@
   .titulo-bsz{
     font-size: 30px;
   }
-  .sk-icon-bsz{
-    height: 75px;
-    width: 75px;
-  }
-  .card-icon-bsz{
-    height: 95px;
-    width: 95px;
-    border-radius: 10px;
-    margin: 0px 10px ;
-    background-color: rgb(255, 255, 255);
-  }
   .bsz-li{
       .li-bsz-icons{
         font-size: 1.8rem;
         color: var(--bsz-font-color-green);
       }  
+  }
+  .bg-pasti-bsz{
+    p{
+      margin: 2em 0 1em 0;
+    }
+  }
+  .wrapper-bsz-pill ul li {
+    width: 80px;
+    height: 80px;
+    line-height: 80px;
+  }
+  .wrapper-bsz-pill ul li .i-react {
+    width: 35px;
+  }
+  .wrapper-bsz-pill ul li .i-bootstrap {
+    width: 35px;
+  }
+  .wrapper-bsz-pill ul li .i-sass {
+    width: 35px;
   }
   }
 
@@ -81,6 +155,25 @@
         font-size: 1.5rem;
         color: var(--bsz-font-color-green);
       }  
+  }
+  .bg-pasti-bsz{
+      p{
+        margin: 2em 0 1em 0;
+      }
+  }
+  .wrapper-bsz-pill ul li {
+    width: 75px;
+    height: 75px;
+    line-height: 75px;
+  }
+  .wrapper-bsz-pill ul li .i-react {
+    width: 30px;
+  }
+  .wrapper-bsz-pill ul li .i-bootstrap {
+    width: 30px;
+  }
+  .wrapper-bsz-pill ul li .i-sass {
+    width: 30px;
   }
   
   }
