--- a/src/styles/component/_thorkey.scss
+++ b/src/styles/component/_thorkey.scss
@@ -20,6 +20,7 @@
       p{
         color: #fff;
         @extend .project-tech-stack;
+        margin: 1em 0;
       }
 }
 .card{
@@ -42,112 +43,7 @@
       }
   }
 
-  //Pills
-  .wrapper-thorkey-pill ul {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    vertical-align: middle;
-    justify-content: center;
-    margin: 2em 0 2em 0;
-  }
-  .wrapper-thorkey-pill ul li {
-    width: 90px;
-    height: 90px;
-    line-height: 90px;
-    margin: 0 10px;
-    margin-top: 10px;
-    text-align: center;
-    cursor: pointer;
-    border-radius: 50%;
-    border: var(--border-wrapper-skills);
-    transition: all 0.5s ease;
-    background-color: #ffffffdd;
-  }
-  .wrapper-thorkey-pill ul li img{
-    width:30px;
-    margin-bottom: 10px;
-    opacity: var(--skills-opacity-img);
-    pointer-events: none;
-  }
 
-
-/*wordpress*/
-.wrapper-thorkey-pill ul li:hover.border-wp {
-  border: 5px solid #21759b;
-  box-shadow: 0 0 15px #21759b;
-  transition: all 0.3s ease;
-}
-.wrapper-thorkey-pill ul li .i-wp {
-  width: 45px;
-}
-.wrapper-thorkey-pill ul li:hover .i-wp {
-  opacity: 1;
-  transition: all 0.3s ease;
-}
-/*wooCommerce*/
-.wrapper-thorkey-pill ul li:hover.border-woo {
-  border: 5px solid #9b5c8f;
-  box-shadow: 0 0 15px #9b5c8f;
-  transition: all 0.3s ease;
-}
-.wrapper-thorkey-pill ul li .i-woo {
-  width: 45px;
-}
-.wrapper-thorkey-pill ul li:hover .i-woo {
-  opacity: 1;
-  transition: all 0.3s ease;
-}
-/*mercado pago*/
-.wrapper-thorkey-pill ul li:hover.border-mercado {
-  border: 5px solid #04a6e9;
-  box-shadow: 0 0 15px #04a6e9;
-  transition: all 0.3s ease;
-}
-.wrapper-thorkey-pill ul li .i-mercado {
-  width: 45px;
-}
-.wrapper-thorkey-pill ul li:hover .i-mercado {
-  opacity: 1;
-  transition: all 0.3s ease;
-}
-/*elementor*/
-.wrapper-thorkey-pill ul li:hover.border-elementor {
-  border: 5px solid #bd3264;
-  box-shadow: 0 0 15px #bd3264;
-  transition: all 0.3s ease;
-}
-.wrapper-thorkey-pill ul li .i-elementor {
-  width: 45px;
-}
-.wrapper-thorkey-pill ul li:hover .i-elementor {
-  opacity: 1;
-  transition: all 0.3s ease;
-}
-
-
-
-
-@media screen and (max-width: 1200px) {
-  .wrapper-thorkey-pill ul li {
-    width: 85px;
-    height: 85px;
-    line-height: 85px;
-  }
-  .wrapper-thorkey-pill ul li .i-wp {
-    width: 40px;
-  }
-  .wrapper-thorkey-pill ul li .i-woo {
-    width: 40px;
-  }
-  .wrapper-thorkey-pill ul li .i-mercado {
-    width: 40px;
-  }
-  .wrapper-thorkey-pill ul li .i-elementor {
-    width: 40px;
-  }
-
-}
 /* Breakpoint  formato pc, arriba de los 991px*/
 @media screen and (max-width: 992px) {
       .img-thorkey{
@@ -158,24 +54,6 @@
           margin: 2em 1em 1em 1em;
         }
       }
-      .wrapper-thorkey-pill ul li {
-        width: 85px;
-        height: 85px;
-        line-height: 85px;
-      }
-      .wrapper-thorkey-pill ul li .i-wp {
-        width: 40px;
-      }
-      .wrapper-thorkey-pill ul li .i-woo {
-        width: 40px;
-      }
-      .wrapper-thorkey-pill ul li .i-mercado {
-        width: 40px;
-      }
-      .wrapper-thorkey-pill ul li .i-elementor {
-        width: 40px;
-      }
-
 }
   
 /* Breakpoint formato tablet*/
@@ -211,24 +89,7 @@
           margin: 2em 0 0 0;
         }
       }
-      .wrapper-thorkey-pill ul li {
-        width: 80px;
-        height: 80px;
-        line-height: 80px;
-      }
-      .wrapper-thorkey-pill ul li .i-wp {
-        width: 35px;
-      }
-      .wrapper-thorkey-pill ul li .i-woo {
-        width: 35px;
-      }
-      .wrapper-thorkey-pill ul li .i-mercado {
-        width: 35px;
-      }
-      .wrapper-thorkey-pill ul li .i-elementor {
-        width: 35px;
-      }
-    
+         
 }
 
 /* Breakpoint formato mobile*/
@@ -256,22 +117,5 @@
       p{
         margin: 2em 0 0 0;
       }
-  }
-  .wrapper-thorkey-pill ul li {
-    width: 75px;
-    height: 75px;
-    line-height: 75px;
-  }
-  .wrapper-thorkey-pill ul li .i-wp {
-    width: 30px;
-  }
-  .wrapper-thorkey-pill ul li .i-woo {
-    width: 30px;
-  }
-  .wrapper-thorkey-pill ul li .i-mercado {
-    width: 30px;
-  }
-  .wrapper-thorkey-pill ul li .i-elementor {
-    width: 30px;
   }
 }
