--- a/src/styles/component/_darkMode.scss
+++ b/src/styles/component/_darkMode.scss
@@ -19,7 +19,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #66a4a9;
+    background-color: #ffffff;
     transition: .4s;
     border-radius: 30px;
   }
