--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -5,12 +5,11 @@ $p-font-family: 'Poppins', sans-serif;
 //Dark mode changes
 :root {
     --body-background: #fafafa;
-    --intro-font-color: #404040;
+    --intro-font-color: #f3f3f3;
     --p-font-color: #656565;
     --experience-li-p: #818181;
-    --bg-image-intro: url("../../pics/light-banner3.svg");
-    --bg-color-footer: #ff9d00;
-    --bg-image-footer: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='69.9' stroke-opacity='0.03' %3E%3Ccircle fill='%23ff9d00' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23fb8d17' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%23f47d24' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%23ed6e2d' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23e35f34' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23d85239' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%23cc453e' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%23be3941' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%23b02f43' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23a02644' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23901e44' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23801843' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%236f1341' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%235e0f3d' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%234e0c38' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%233e0933' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%232e062c' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%23210024' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+    --bg-image-intro: linear-gradient(to bottom, #f0c27b, #4b1248);
+    --bg-image-footer: linear-gradient(to bottom, #f0c27b, #4b1248);
     --bg-toggle-switch-lenguage: #ffffff;
     --bsz-font-color-green: #157347;
     --walletfy-bg-video: #f5f5f5;
@@ -23,7 +22,6 @@ $p-font-family: 'Poppins', sans-serif;
     --border-wrapper-skills: 5px solid #bfc0bf;
     --skills-opacity-img: 0.8;
     --aboutme-bg-p: #fff8f0;
-
 }
 
 [data-theme="dark"]{
@@ -31,9 +29,8 @@ $p-font-family: 'Poppins', sans-serif;
     --intro-font-color: #f3f3f3;
     --p-font-color: #f3f3f3;
     --experience-li-p: #e8e8e8;
-    --bg-image-intro: url("../../pics/dark-banner.svg");
-    --bg-color-footer: #542331;
-    --bg-image-footer: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%23542331' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23512230' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%234d2130' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%234a212f' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%2347202e' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23431f2d' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%23401e2d' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%233d1e2c' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%23391d2b' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23361c2b' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23321b2a' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%232f1b29' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%232c1a29' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%23281928' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%23251827' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%23221826' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%231e1726' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%231B1625' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+    --bg-image-intro: linear-gradient(to top, #542331, #292030);
+    --bg-image-footer: linear-gradient(to right, #542331, #292030);
     --bg-toggle-switch-lenguage: #183153;
     --bsz-font-color-green: #2dc57e;
     --walletfy-bg-video: #011d2a;
