Header & Footer background in mobile fixed

--- a/src/styles/component/_footer.scss
+++ b/src/styles/component/_footer.scss
@@ -1,7 +1,5 @@
 footer{
-    background-image: var(--bg-image-footer);
-    background-attachment: fixed;
-    background-size: cover;
+    background: var(--bg-image-footer);
   }
   
 .ft-title{
