--- a/src/styles/component/_intro.scss
+++ b/src/styles/component/_intro.scss
@@ -1,7 +1,5 @@
 .bg-intro2{
-  background-image: var(--bg-image-intro);
-  background-attachment: fixed;
-  background-size: cover;
+  background: var(--bg-image-intro);
 }
 .titulo-intro {
     font-size: 60px;
