--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -9,7 +9,7 @@ $p-font-family: 'Poppins', sans-serif;
     --p-font-color: #656565;
     --experience-li-p: #818181;
     --bg-image-intro: linear-gradient(to bottom, #f0c27b, #4b1248);
-    --bg-image-footer: linear-gradient(to bottom, #f0c27b, #4b1248);
+    --bg-image-footer: linear-gradient(to top, #f0c27b, #4b1248);
     --bg-toggle-switch-lenguage: #ffffff;
     --bsz-font-color-green: #157347;
     --walletfy-bg-video: #f5f5f5;
@@ -30,7 +30,7 @@ $p-font-family: 'Poppins', sans-serif;
     --p-font-color: #f3f3f3;
     --experience-li-p: #e8e8e8;
     --bg-image-intro: linear-gradient(to top, #542331, #292030);
-    --bg-image-footer: linear-gradient(to right, #542331, #292030);
+    --bg-image-footer: linear-gradient(to bottom, #542331, #292030);
     --bg-toggle-switch-lenguage: #183153;
     --bsz-font-color-green: #2dc57e;
     --walletfy-bg-video: #011d2a;
