--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -8,8 +8,8 @@ $p-font-family: 'Poppins', sans-serif;
     --intro-font-color: #f3f3f3;
     --p-font-color: #656565;
     --experience-li-p: #818181;
-    --bg-image-intro: linear-gradient(to bottom, #f0c27b, #4b1248);
-    --bg-image-footer: linear-gradient(to top, #f0c27b, #4b1248);
+    --bg-image-intro: linear-gradient(to left, #f0c27b, #4b1248);
+    --bg-image-footer: linear-gradient(to left, #f0c27b, #4b1248);
     --bg-toggle-switch-lenguage: #ffffff;
     --bsz-font-color-green: #157347;
     --walletfy-bg-video: #f5f5f5;
@@ -22,6 +22,12 @@ $p-font-family: 'Poppins', sans-serif;
     --border-wrapper-skills: 5px solid #bfc0bf;
     --skills-opacity-img: 0.8;
     --aboutme-bg-p: #fff8f0;
+
+    /* Breakpoint formato tablet*/
+@media screen and (max-width: 768px) {
+    --bg-image-intro: linear-gradient(to bottom, #f0c27b, #4b1248);
+    --bg-image-footer: linear-gradient(to bottom, #f0c27b, #4b1248);
+}
 }
 
 [data-theme="dark"]{
