--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -11,6 +11,7 @@ $p-font-family: 'Poppins', sans-serif;
     --bg-image-intro: linear-gradient(to left, #f0c27b, #4b1248);
     --bg-image-footer: linear-gradient(to left, #f0c27b, #4b1248);
     --bg-toggle-switch-lenguage: #ffffff;
+    --cleanhouse-font-color: #f5d621;
     --bsz-font-color-green: #157347;
     --walletfy-bg-video: #f5f5f5;
     --kyber-font-color: #373737;
