--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -11,7 +11,7 @@ $p-font-family: 'Poppins', sans-serif;
     --bg-image-intro: linear-gradient(to left, #f0c27b, #4b1248);
     --bg-image-footer: linear-gradient(to left, #f0c27b, #4b1248);
     --bg-toggle-switch-lenguage: #ffffff;
-    --cleanhouse-font-color: #f5d621;
+    --cleanhouse-font-color: #373737;
     --bsz-font-color-green: #157347;
     --walletfy-bg-video: #f5f5f5;
     --kyber-font-color: #373737;
@@ -39,6 +39,7 @@ $p-font-family: 'Poppins', sans-serif;
     --bg-image-intro: linear-gradient(to top, #542331, #292030);
     --bg-image-footer: linear-gradient(to bottom, #542331, #292030);
     --bg-toggle-switch-lenguage: #183153;
+    --cleanhouse-font-color: #f5d621;
     --bsz-font-color-green: #2dc57e;
     --walletfy-bg-video: #011d2a;
     --kyber-font-color: #f3f3f3;
