--- a/src/styles/component/_navbar.scss
+++ b/src/styles/component/_navbar.scss
@@ -1,8 +1,5 @@
 nav{
-  background-color: var(--bg-color-intro);
-  background-image: var(--bg-image-intro);
-  background-attachment: fixed;
-  background-size: cover;
+  background-color: var(--bg-navbar);
   padding: 5px 0;
   opacity: 0.9;
 }
