--- a/src/styles/component/_intro.scss
+++ b/src/styles/component/_intro.scss
@@ -1,5 +1,5 @@
 .bg-intro2{
-  background: var(--bg-image-intro);
+  background-image: var(--bg-image-intro);
 }
 .titulo-intro {
     font-size: 60px;
