--- a/src/styles/component/_projects.scss
+++ b/src/styles/component/_projects.scss
@@ -13,6 +13,29 @@
   }
 
 
+    .miniatura {
+      transition: transform 0.2s ease-in-out;
+    }
+    
+    .miniatura:hover {
+      transform: scale(1.1);
+    }
+    
+    .miniatura:active {
+      animation: bounce 0.2s;
+    }
+    
+    @keyframes bounce {
+      0% {
+        transform: scale(1.1);
+      }
+      50% {
+        transform: scale(0.9);
+      }
+      100% {
+        transform: scale(1);
+      }
+    }
 
 /* Breakpoint formato mac*/
 @media screen and (max-width: 995px) {
@@ -40,6 +63,10 @@
   .projects-wrapper{
       padding: 0 4em;
   }
+  .miniatura:hover {
+    transform: none;
+    pointer-events: none;
+  }
 }
 /* Breakpoint formato tablet*/
 @media screen and (max-width: 576px) {
@@ -48,12 +75,20 @@
     margin: 3em 1em 4em 1em ;
   }
   .projects-wrapper{
-      padding: 0 4em;
+      padding: 0 1em;
+  }
+  .miniatura:hover {
+    transform: none;
+    pointer-events: none;
   }
 }
 /* Breakpoint formato tablet*/
 @media screen and (max-width: 420px) {
   .projects-wrapper{
-      padding: 0 3em;
+      padding: 0 1em;
+  }
+  .miniatura:hover {
+    transform: none;
+    pointer-events: none;
   }
 }
