--- a/src/styles/component/_work.scss
+++ b/src/styles/component/_work.scss
@@ -8,21 +8,44 @@
     text-align: center;
     margin: 2em 3em 2em 3em ;
   }
-  .miniatura{
-      border-radius: 30px;
-    }
-  .miniatura-pic{
-      border-radius: 30px;
-    }
+.miniatura-work{
+  border-radius: 30px;
+  }
+.miniatura-pic-work{
+  border-radius: 30px;
+  }
+
+
+  .miniatura-work {
+    transition: transform 0.2s ease-in-out;
+  }
   
+  .miniatura-work:hover {
+    transform: scale(1.1);
+  }
   
+  .miniatura-work:active {
+    animation: bounce 0.2s;
+  }
+  
+  @keyframes bounce {
+    0% {
+      transform: scale(1.1);
+    }
+    50% {
+      transform: scale(0.9);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
   
   /* Breakpoint formato mac*/
   @media screen and (max-width: 995px) {
     .work-subtitle{
       margin: 4em 1em 5em 1em ;
     }
-    .projects-wrapper{
+    .work-wrapper{
       display: flex;
       flex-wrap: wrap;
       flex-direction: column;
@@ -30,7 +53,7 @@
       justify-content: center;
       padding: 0 5em;
     }
-    .miniatura-pic{
+    .miniatura-pic-work{
       max-width: 100%;
     }
   }  
@@ -40,8 +63,12 @@
       font-size: 16px;   
       margin: 4em 0 5em 0 ;
     }
-    .projects-wrapper{
+    .work-wrapper{
         padding: 0 4em;
+    }
+    .miniatura-work:hover {
+      transform: none;
+      pointer-events: none;
     }
   }
   /* Breakpoint formato tablet*/
@@ -50,13 +77,21 @@
       font-size: 14px;   
       margin: 3em 1em 4em 1em ;
     }
-    .projects-wrapper{
-        padding: 0 4em;
+    .work-wrapper{
+        padding: 0;
+    }
+    .miniatura-work:hover {
+      transform: none;
+      pointer-events: none;
     }
   }
   /* Breakpoint formato tablet*/
   @media screen and (max-width: 420px) {
-    .projects-wrapper{
-        padding: 0 3em;
+    .work-wrapper{
+        padding: 0;
+    }
+    .miniatura-work:hover {
+      transform: none;
+      pointer-events: none;
     }
   }
